layout bug fixed

--- a/style.css
+++ b/style.css
@@ -33,15 +33,16 @@ body {
 }
 
 .namebtn.selected {
-    background-color: #343a40;
-    color: white;
+    background-color: #343a40!important;
+    color: white!important;
 }
 
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 25%;
+    max-height: 25%;
+    max-width: 100%;
 }
 
 #names {
@@ -59,6 +60,8 @@ body {
 .namebtn {
     margin: 10px;
     width: 120px;
+    color: #343a40!important;
+    border-color: #343a40!important;
 }
 
 #vs {
@@ -69,12 +72,14 @@ body {
 }
 
 .cdt {
+    width: 90%;
     height: 100%;
     cursor: pointer;
 }
 
 .row {
     height: 100%;
+    width: 100%;
 }
 
 .name {
@@ -87,5 +92,6 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 95%;
+    max-height: 90%;
+    max-width: 75%;
 }
